# Apriltag-VS2017

./: CMakeLists.txt
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h
apriltaglib/: CMakeLists.txt
apriltaglib/include/AprilTags/: Tag16h5.h  TagDetection.h  TagDetector.h  TagFamily.h
apriltaglib/src/: TagDetection.cc
